methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:2: error: not found: value vuBiscuit
  vuBiscuit==false
  ^MethodsReturning:6: error: not found: value vuBiscuit
      vuBiscuit=true
      ^MethodsReturning:10: error: not found: value vuBiscuit
  return(vuBiscuit)
         ^